--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,48 @@
-.venv
+# Python virtual environment
+.venv/
+env/
+venv/
+
+# Environment variables
 .env
+
+# Logs
+logs/
+*.log
+
+# Byte-compiled files
+__pycache__/
+*.py[cod]
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
+
+# Pytest cache
+.cache
+
+# IDE specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Other files
+*.DS_Store
+*.bak
+*.tmp
